--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/react": "^2.1.3",
     "gatsby": "^4.23.1",
     "gatsby-plugin-image": "^2.23.1",
+    "gatsby-plugin-layout": "^3.23.0",
     "gatsby-plugin-manifest": "^4.23.1",
+    "gatsby-plugin-mdx": "^4.2.1",
     "gatsby-plugin-sharp": "^4.23.1",
+    "gatsby-plugin-styled-components": "^5.23.0",
+    "gatsby-plugin-webfonts": "^2.2.2",
     "gatsby-source-filesystem": "^4.23.0",
     "gatsby-transformer-sharp": "^4.23.1",
     "prop-types": "^15.8.1",
