--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@mdx-js/react": "^2.1.3",
+    "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.23.1",
+    "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-image": "^2.23.1",
     "gatsby-plugin-layout": "^3.23.0",
     "gatsby-plugin-manifest": "^4.23.1",
     "gatsby-plugin-mdx": "^4.2.1",
+    "gatsby-plugin-page-creator": "^4.24.0",
     "gatsby-plugin-sharp": "^4.23.1",
     "gatsby-plugin-styled-components": "^5.23.0",
     "gatsby-plugin-webfonts": "^2.2.2",
+    "gatsby-remark-responsive-iframe": "^5.24.0",
     "gatsby-source-filesystem": "^4.23.0",
     "gatsby-transformer-sharp": "^4.23.1",
+    "lmdb-store": "^1.6.14",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
