--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@mdx-js/react": "^2.1.4",
     "@react-icons/all-files": "^4.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "dotenv": "^16.0.3",
     "gatsby": "^4.24.4",
     "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-image": "^2.24.0",
@@ -19,12 +21,15 @@
     "gatsby-plugin-styled-components": "^5.24.0",
     "gatsby-plugin-webfonts": "^2.2.2",
     "gatsby-remark-responsive-iframe": "^5.24.0",
+    "gatsby-source-datocms": "^4.0.4",
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
     "lmdb-store": "^1.6.14",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "slugify": "^1.6.5",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
