--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-layout": "^3.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
-    "gatsby-plugin-mdx": "^4.3.0",
+    "gatsby-plugin-netlify": "^5.0.1",
     "gatsby-plugin-offline": "^5.24.0",
     "gatsby-plugin-page-creator": "^4.24.1",
     "gatsby-plugin-sharp": "^4.24.0",
