--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "dotenv": "^16.0.3",
     "gatsby": "^4.24.4",
     "gatsby-plugin-fontawesome-css": "^1.2.0",
+    "gatsby-plugin-google-gtag": "^4.25.0",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-layout": "^3.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
     "gatsby-plugin-netlify": "^5.0.1",
     "gatsby-plugin-offline": "^5.24.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
     "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-plugin-sitemap": "^5.25.0",
     "gatsby-plugin-styled-components": "^5.24.0",
     "gatsby-plugin-webfonts": "^2.2.2",
     "gatsby-remark-responsive-iframe": "^5.24.0",
